# idapromcp_333

./: .gitignore  CONTRIBUTING.md  README.md  fill_report.py  ida-plugin.json  install.py  pyproject.toml  read_report.py  requirements.txt  test_script_utils.py  参考json.txt
src/ida_pro_mcp/: __init__.py  idalib_server.py  mcp-plugin.py  mcp-plugin_optimized.py  mcp_config.json  script_utils.py  server.py
