[project]
name = "ida-pro-mcp"
version = "1.4.0"
description = "Vibe reversing with IDA Pro"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "namename333" }]
keywords = ["ida", "mcp", "llm", "plugin"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.0.0",
    "setuptools>=65.0.0",
    "typing-extensions>=4.0.0",
]

[project.urls]
Repository = "https://github.com/namename333/idapromcp_333"
Issues = "https://github.com/namename333/idapromcp_333/issues"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mcp[cli]>=1.6.0",
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[project.scripts]
ida-pro-mcp = "ida_pro_mcp.server:main"
idalib-mcp = "ida_pro_mcp.idalib_server:main"
